# Formal-Languages-homeworks

./: .gitignore  README.md
HW02/prolog files/: auto.mod  mortal.mod
HW03/benchmarking/: CMakeLists.txt  benchmark_install.sh
HW03/parser/: CMakeLists.txt  main.cpp
HW03/parser/src/: parser.cpp
HW03/test/: TestMain.cpp
HW04/: CMakeLists.txt  README.md  main.cpp
HW04/benchmark/: CMakeLists.txt
HW04/include/: lexer.h  parser.h  reader.h
HW04/src/: lexer.cpp  parser.cpp
HW04/test/: CMakeLists.txt  TestMain.cpp
Parser with derivatives/benchmarking/: benchmarks.cpp
Parser with derivatives/include/: parser.h
Parser with derivatives/test/: CMakeLists.txt
Parsita parser combinator/: README.md  parser.py  requirements.txt  test.py
Prolog lexer/: main.py
Prolog lexer/prolog files/: auto.sig  mortal.sig
Recursive descent parser/: CMakeLists.txt  README.md  main.cpp
Recursive descent parser/benchmark/: benchmarks.cpp
Recursive descent parser/include/: lexer.h  parser.h
Recursive descent parser/src/: lexer.cpp  parser.cpp  reader.cpp
Recursive descent parser/test/: doctest.h
Syntax analyzer using parser generator/: README.md  abstractSyntaxTree.py  lexer.py  parser.py  requirements.txt  test.py
Syntax analyzer using parser generator/prolog files/: auto.sig
